--- a/buildSrc/src/main/groovy/net.onebeastchris.geyserperserverpacks.java-conventions.gradle
+++ b/buildSrc/src/main/groovy/net.onebeastchris.geyserperserverpacks.java-conventions.gradle
@@ -33,8 +33,8 @@ repositories {
 }
 
 group = 'net.onebeastchris.geyserperserverpacks'
-version = '1.2-SNAPSHOT'
-java.sourceCompatibility = JavaVersion.VERSION_1_8
+version = '1.0-SNAPSHOT'
+java.sourceCompatibility = JavaVersion.VERSION_16
 
 publishing {
     publications {
