--- a/bungeecord/src/main/resources/bungee.yml
+++ b/bungeecord/src/main/resources/bungee.yml
@@ -1,6 +1,6 @@
-name: GeyserBlockJavaPlayers
+name: GeyserPerServerPacksBungee
 version: ${project.version}
 main: net.onebeastchris.geyserperserverpacks.GeyserPerServerPacksBungee
-description: Prevent Java players from joining your server
-softdepends: [floodgate, Geyser-BungeeCord]
-author: Camotoy
+description: A plugin that allows you to set a different resource pack for each server on GeyserMC
+softdepends: [Geyser-BungeeCord]
+author: onebeastchris
