--- a/common/build.gradle
+++ b/common/build.gradle
@@ -12,8 +12,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.14.2'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.14.2'
     implementation 'org.projectlombok:lombok:1.18.22'
-    compileOnly 'org.geysermc.geyser:core:2.1.1-SNAPSHOT'
-    compileOnly 'org.geysermc.floodgate:api:2.1.1-SNAPSHOT'
+    compileOnly("org.geysermc.geyser:api:2.1.1-SNAPSHOT")
 }
 
 description = 'common'
