--- a/velocity/build.gradle
+++ b/velocity/build.gradle
@@ -11,6 +11,7 @@ plugins {
 dependencies {
     implementation project(':common')
     compileOnly 'com.velocitypowered:velocity-api:3.1.1'
+    compileOnly("org.geysermc.geyser:api:2.1.1-SNAPSHOT")
 }
 
 description = 'velocity'
