--- a/bungeecord/build.gradle
+++ b/bungeecord/build.gradle
@@ -9,9 +9,29 @@ plugins {
 }
 
 dependencies {
-    implementation project(':common')
-    compileOnly 'net.md-5:bungeecord-api:1.17-R0.1-SNAPSHOT'
+    api project(':common')
+    compileOnly 'net.md-5:bungeecord-api:1.20-R0.1-SNAPSHOT'
     compileOnly("org.geysermc.geyser:api:2.1.1-SNAPSHOT")
+    compileOnly("org.geysermc.geyser:core:2.1.1-SNAPSHOT") {
+        exclude(group: "io.netty")
+        exclude(group: "com.github.GeyserMC", module: "MCAuthLib")
+        exclude(group: "net.kyori")
+        exclude(group: "com.github.GeyserMC", module: "opennbt")
+    }
+}
+
+build {
+    dependsOn jar
+    setArchivesBaseName("geyserperserverpacks-bungee")
+}
+
+jar {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
 
 description = 'bungeecord'
+
+
