--- a/common/src/main/resources/config.yml
+++ b/common/src/main/resources/config.yml
@@ -1,11 +1,8 @@
 # GeyserPerServerPacks configuration file.
 
 # Which servers should have per-server packs? Add the server names here.
-# You can make an "all" group, which will apply packs to all servers additionally to per-server packs.
-servers:
-- "example" # This would be the name of the server in your proxy config.
-#- "all"    # Uncomment this line to create an "all" group.
 
-# Should we use the transfer packet to reconnect the player automatically? If this does not work, disable it.
-# If disabled, the player will have to manually connect to the server to get the pack.
-use-transfer-packet: true
+servers:
+# This would be the name of the server(s) in your proxy config.
+# - "lobby"
+# - "example"
