--- a/velocity/build.gradle
+++ b/velocity/build.gradle
@@ -10,8 +10,26 @@ plugins {
 
 dependencies {
     implementation project(':common')
-    compileOnly 'com.velocitypowered:velocity-api:3.1.1'
+    compileOnly("com.velocitypowered:velocity-api:3.1.1")
     compileOnly("org.geysermc.geyser:api:2.1.1-SNAPSHOT")
+    compileOnly("org.geysermc.geyser:core:2.1.1-SNAPSHOT") {
+        exclude(group: "io.netty")
+        exclude(group: "com.github.GeyserMC", module: "MCAuthLib")
+        exclude(group: "net.kyori")
+        exclude(group: "com.github.GeyserMC", module: "opennbt")
+    }
+}
+
+build {
+    dependsOn jar
+    setArchivesBaseName("geyserperserverpacks-velocity")
+}
+
+jar {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
 
 description = 'velocity'
