--- a/common/src/main/resources/config.yml
+++ b/common/src/main/resources/config.yml
@@ -7,10 +7,9 @@ port: 19132
 # Which servers should have per-server packs? Add the server names here.
 servers:
 # This would be the name of the server(s) in your proxy config.
-# - "lobby"
-# - "example"
+# - name: "lobby"
+# - name: "example"
 
-#
 
 # We can't apply the packs of the first server you join to, so you can set a default server here.
 # Forced hosts override this.
