--- a/velocity/build.gradle
+++ b/velocity/build.gradle
@@ -6,11 +6,12 @@
 
 plugins {
     id 'net.onebeastchris.geyserperserverpacks.java-conventions'
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
 dependencies {
     implementation project(':common')
-    compileOnly("com.velocitypowered:velocity-api:3.1.1")
+    compileOnly("com.velocitypowered:velocity-api:3.0.0")
     compileOnly("org.geysermc.geyser:api:2.1.1-SNAPSHOT")
     compileOnly("org.geysermc.geyser:core:2.1.1-SNAPSHOT") {
         exclude(group: "io.netty")
@@ -21,15 +22,22 @@ dependencies {
 }
 
 build {
-    dependsOn jar
     setArchivesBaseName("geyserperserverpacks-velocity")
 }
 
 jar {
+    dependsOn ':common:jar'
+    archiveClassifier.set('unshaded')
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
     from {
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
 
-description = 'velocity'
+shadowJar {
+    archiveBaseName.set('geyserperserverpacks-velocity')
+    archiveClassifier.set('')
+
+    relocate('com.fasterxml.jackson', 'net.onebeastchris.geyserperserverpacks.jackson')
+    relocate('org.yaml', 'net.onebeastchris.geyserperserverpacks.yaml')
+}
