--- a/common/build.gradle
+++ b/common/build.gradle
@@ -5,7 +5,7 @@
  */
 
 plugins {
-    id("net.onebeastchris.geyserperserverpacks.java-conventions")
+    id("net.onebeastchris.geyserpacksync.java-conventions")
     id("io.freefair.lombok") version "8.0.1"
 }
 
