--- a/common/src/main/resources/config.yml
+++ b/common/src/main/resources/config.yml
@@ -1,4 +1,4 @@
-# GeyserPerServerPacks configuration file.
+# GeyserPackSync configuration file.
 
 # Set the Geyser ip and port here that you would use to connect to the proxy. Needed for the reconnect feature.
 address: "127.0.0.1"
@@ -9,7 +9,7 @@ servers:
   # This would be the name of the server(s) in your proxy config. Add one line per server.
   # Server names must match the ones in your proxy config exactly.
   - name: "lobby"
-  - name: "example"
+#  - name: "example"
 
 # We can't apply the packs of the first server you join to (yet), so you can set a default server here.
 # The packs of this server get applied when the Bedrock player first joins the proxy
