--- a/velocity/build.gradle
+++ b/velocity/build.gradle
@@ -5,7 +5,7 @@
  */
 
 plugins {
-    id 'net.onebeastchris.geyserperserverpacks.java-conventions'
+    id 'net.onebeastchris.geyserpacksync.java-conventions'
     id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
@@ -24,7 +24,7 @@ dependencies {
 }
 
 build {
-    setArchivesBaseName("geyserperserverpacks-velocity")
+    setArchivesBaseName("geyserpacksync-velocity")
 }
 
 jar {
@@ -37,7 +37,7 @@ jar {
 }
 
 shadowJar {
-    archiveBaseName.set('geyserperserverpacks-velocity')
+    archiveBaseName.set('geyserpacksync-velocity')
     archiveClassifier.set('')
 
     relocate('com.fasterxml.jackson', 'net.onebeastchris.geyserperserverpacks.jackson')
