--- a/bungeecord/src/main/resources/bungee.yml
+++ b/bungeecord/src/main/resources/bungee.yml
@@ -2,5 +2,5 @@ name: GeyserPackSync
 version: 1.1-SNAPSHOT
 main: net.onebeastchris.geyserpacksync.GeyserPackSyncBungee
 description: A plugin that allows you to set a different Bedrock edition resource pack(s) per server on your network.
-softdepends: [Geyser-BungeeCord]
+depends: [Geyser-BungeeCord]
 author: onebeastchris
