--- a/buildSrc/src/main/groovy/net.onebeastchris.geyserpacksync.java-conventions.gradle
+++ b/buildSrc/src/main/groovy/net.onebeastchris.geyserpacksync.java-conventions.gradle
@@ -12,48 +12,44 @@ plugins {
 repositories {
     // mavenLocal()
     mavenCentral()
-    maven {
-        url = uri('https://repo.maven.apache.org/maven2/')
-    }
 
+    // Bungee
     maven {
         url = uri('https://oss.sonatype.org/content/repositories/snapshots')
     }
 
+    //  Paper, Velocity
     maven {
         name = "papermc"
-        url = uri("https://repo.papermc.io/repository/maven-public/")
+        url = uri("https://papermc.io/repo/repository/maven-public/")
     }
 
-    maven {
-        url = uri('https://hub.spigotmc.org/nexus/content/repositories/snapshots/')
-    }
-
-    maven {
-        url = uri('https://papermc.io/repo/repository/maven-public/')
-    }
-
-    maven {
-        url = uri('jitpack.io')
-    }
-
+    // Geyser api
     maven {
         url = uri('https://repo.opencollab.dev/main')
     }
-}
 
-group = 'net.onebeastchris.geyserperserverpacks'
-version = '1.1-SNAPSHOT'
-java.sourceCompatibility = JavaVersion.VERSION_16
+    // Used to get Bungee proxy builds for internals
+    maven {
+        url = uri("https://jitpack.io")
+        content { includeGroupByRegex("com\\.github\\..*") }
+    }
 
-publishing {
-    publications {
-        maven(MavenPublication) {
-            from(components.java)
-        }
+    // velocity-proxy
+    maven {
+        url = uri("https://maven.elytrium.net/repo/")
+    }
+
+    // adventure
+    maven {
+        url = uri("https://s01.oss.sonatype.org/content/repositories/snapshots/")
     }
 }
 
-tasks.withType(JavaCompile) {
+group = 'net.onebeastchris.geyserpacksync'
+version = '2.0-SNAPSHOT'
+java.sourceCompatibility = JavaVersion.VERSION_17
+
+tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
 }
