--- a/bungeecord/build.gradle
+++ b/bungeecord/build.gradle
@@ -10,14 +10,10 @@ plugins {
 
 dependencies {
     api project(':common')
-    compileOnly 'net.md-5:bungeecord-api:1.20-R0.1-SNAPSHOT'
-    compileOnly("org.geysermc.geyser:api:2.1.1-SNAPSHOT")
-    compileOnly("org.geysermc.geyser:core:2.1.1-SNAPSHOT") {
-        exclude(group: "io.netty")
-        exclude(group: "com.github.GeyserMC", module: "MCAuthLib")
-        exclude(group: "net.kyori")
-        exclude(group: "com.github.GeyserMC", module: "opennbt")
-    }
+    compileOnly 'net.md-5:bungeecord-api:1.20-R0.2-SNAPSHOT'
+    compileOnly("org.geysermc.geyser:api:2.2.0-SNAPSHOT")
+
+    compileOnly("com.github.SpigotMC.BungeeCord:bungeecord-proxy:19918c694f")
 }
 
 build {
@@ -26,6 +22,8 @@ build {
 }
 
 jar {
+    dependsOn ':common:jar'
+    //archiveClassifier.set('unshaded')
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
     from {
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
