let's not use the velocity dependency, and instead reflection! also automatic modrinth publishing, cause why not

--- a/velocity/build.gradle
+++ b/velocity/build.gradle
@@ -2,6 +2,7 @@
 plugins {
     id 'net.onebeastchris.geyserpacksync.java-conventions'
     id 'com.github.johnrengelman.shadow' version '8.1.1'
+    id "com.modrinth.minotaur" version "2.+"
 }
 
 dependencies {
@@ -10,7 +11,6 @@ dependencies {
     compileOnly("org.geysermc.geyser:api:2.2.0-SNAPSHOT")
     annotationProcessor("com.velocitypowered:velocity-api:3.3.0-SNAPSHOT")
 
-    compileOnly("com.velocitypowered:velocity-proxy:3.3.0-SNAPSHOT")
     compileOnly("io.netty:netty-all:4.1.104.Final")
 }
 
@@ -27,6 +27,22 @@ shadowJar {
     archiveBaseName.set('geyserpacksync-velocity')
     archiveClassifier.set('')
 
-    relocate('com.fasterxml.jackson', 'net.onebeastchris.geyserperserverpacks.jackson')
-    relocate('org.yaml', 'net.onebeastchris.geyserperserverpacks.yaml')
+    relocate('com.fasterxml.jackson', 'net.onebeastchris.geyserpacksync.jackson')
+    relocate('org.yaml', 'net.onebeastchris.geyserpacksync.yaml')
+}
+
+modrinth {
+    token.set(System.getenv("MODRINTH_TOKEN"))
+    projectId.set("geyserpacksync")
+    versionName.set(project.version as String)
+    versionNumber.set(project.version as String + "-b" + System.getenv("GITHUB_RUN_NUMBER"))
+    versionType.set("release")
+    uploadFile.set(shadowJar)
+    gameVersions = ["1.20.3", "1.20.4"]
+    loaders = ["velocity"]
+
+    syncBodyFrom.set(rootProject.file("README.md").text)
+    changelog.set(rootProject.file("CHANGELOG.md").text)
+
+    failSilently.set(true)
 }
