create system variable to publish automatically

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,3 +23,5 @@ jobs:
         run: gradle shadowJar
       - name: Modrinth publishing
         run: gradle modrinth
+        env:
+          MODRINTH_TOKEN: ${{ secrets.MODRINTH_TOKEN }}
